MDEV-11698 Old Bug possibly not fixed; BEFORE INSERT Trigger on NOT NULL

check_that_all_fields_are_given_values() relied on write_set,
but was run too early, before triggers updated write_set.

also, when triggers are present, fields might get values conditionally,
so we need to check that all fields are given values for every row.